--- a/busi-service/pom.xml
+++ b/busi-service/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>account-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.canthny.dubbo</groupId>
+            <artifactId>common-base</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
