--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
 		<module>account-service</module>
 		<module>account-api</module>
 		<module>busi-service</module>
-	</modules>
+		<module>common-base</module>
+        <module>dubbo-spi-extension-demo</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>dubbo-learning</name>
@@ -64,6 +66,11 @@
 			<groupId>org.apache.curator</groupId>
 			<artifactId>curator-framework</artifactId>
 			<version>2.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.brave</groupId>
+			<artifactId>brave</artifactId>
+			<version>5.5.0</version>
 		</dependency>
 
 		<dependency>
