--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,7 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
@@ -71,6 +68,12 @@
 			<groupId>io.zipkin.brave</groupId>
 			<artifactId>brave</artifactId>
 			<version>5.5.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.7</version>
 		</dependency>
 
 		<dependency>
