--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 		<module>busi-service</module>
 		<module>common-base</module>
         <module>dubbo-spi-extension-demo</module>
-    </modules>
+		<module>gateway-service</module>
+	</modules>
 	<packaging>pom</packaging>
 
 	<name>dubbo-learning</name>
@@ -80,6 +81,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.34</version>
 		</dependency>
 	</dependencies>
 
