--- a/account-api/pom.xml
+++ b/account-api/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.canthny.dubbo</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>account-api</artifactId>
